Ingress/loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - name: http
      port: 80        # external port
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: LoadBalancer
  selector:
    app: gateway
  ports:
    - name: http
      port: 80        # external port
      targetPort: 80
      protocol: TCP
