Ingress/medbot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medbot-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"    # ← use GCE HTTP(S) LB
spec:
  rules:
  - http:
      paths:
        - path: /classify
          pathType: Prefix
          backend:
            service:
              name: gateway-service
              port:
                number: 80
        - path: /history
          pathType: Prefix
          backend:
            service:
              name: gateway-service
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
